--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build:tailwind": "tailwindcss build src/styles/style.css -o dist/style.css",
     "dev:chromium": "yarn build:tailwind && webpack --stats-children --watch --progress --config chromium.webpack.js --mode=development",
     "build:chromium": "yarn build:tailwind && webpack --progress --config chromium.webpack.js --mode=production",
+    "format": "prettier \"src/**/*.{js,html,css}\" --write",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "zip": "zip -r dist.zip dist/*",
     "test": "yarn build"
   },
@@ -22,6 +24,10 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.9.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "@tailwindcss/ui": "^0.5.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
@@ -31,6 +37,17 @@
     "image-webpack-loader": "^5.0.0",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.8.3",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.7.1",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.7.2",
